Versão preliminar (quase final)

--- a/main.tex
+++ b/main.tex
@@ -104,8 +104,8 @@
 	\end{center}
 	
 	\begin{quote}
-		O fazer científico\cite{CASTIGLIONE} dito moderno tem se transmutado em atividades cada vez menos compartimentadas, tendo como consequência a possibilidade de realizar estudos cada vez mais conjuntivos. A Geografia brasileira não é exceção dentro deste processo, tendo inclusive um posicionamento privilegiado sobre os questionamentos epistemológicos inevitáveis no qual\cite{DANIELS_etal11} toda a ciência começa a fazer com mais intensidade a cada nova década. Por ter sido historicamente uma das ciências consideradas de transição, o questionamento epistemológico sempre esteve muito presente no pensamento geográfico, o que\cite{CAMARA_etal10} acabou\cite{CESIUM}, de certa forma, facilitando este processo de “(re)descobrimento” do fazer científico.
-	10	Este trabalho analisa como o desenvolvimento de novas técnicas computacionais e suas possibilidades de aplicação na pesquisa geográfica sempre estiveram diretamente ligadas às noções epistemológicas, muitas vezes relacionadas diretamente com o estado do pensamento geográfico brasileiro. Busca-se entender como e porque muitas das técnicas e das ideias mais recentes em vigência no mundo científico, possuem dificuldade de serem, de fato, implementadas e popularizadas entre Geógrafos brasileiros. 
+		O fazer científico dito moderno tem se transmutado em atividades cada vez menos compartimentadas, tendo como consequência a possibilidade de realizar estudos cada vez mais conjuntivos. A Geografia brasileira não é exceção dentro deste processo, tendo inclusive um posicionamento privilegiado sobre os questionamentos epistemológicos inevitáveis no qual toda a ciência começa a fazer com mais intensidade a cada nova década. Por ter sido historicamente uma das ciências consideradas de transição, o questionamento epistemológico sempre esteve muito presente no pensamento geográfico, o que acabou, de certa forma, facilitando este processo de “(re)descobrimento” do fazer científico.
+		10	Este trabalho analisa como o desenvolvimento de novas técnicas computacionais e suas possibilidades de aplicação na pesquisa geográfica sempre estiveram diretamente ligadas às noções epistemológicas, muitas vezes relacionadas diretamente com o estado do pensamento geográfico brasileiro. Busca-se entender como e porque muitas das técnicas e das ideias mais recentes em vigência no mundo científico, possuem dificuldade de serem, de fato, implementadas e popularizadas entre Geógrafos brasileiros. 
 		A partir desta análise busca-se então desenvolver meios computacionais através da criação de um sistema de informação geográfico (SIG) educativo visando com que essa distância seja diminuída e que as dificuldades naturais encontradas entre momentos de quebra de paradigmas no fazer científico como o atual seja realizada de forma mais amena. 
 		Todo o processo de desenvolvimento do SIG é acompanhado de uma extensa discussão sobre o estado da arte dos bancos de dados geográficos e sobre uma possível aplicação do sistema criado em um estudo de caso na Bacia Hidrográfica do Rio São João (BHRSJ) no Estado do Rio de Janeiro como possibilidade de estruturação de uma ferramenta educativa e também de planejamento.
 	\end{quote}
@@ -137,5 +137,8 @@
 	
 	\bibliographystyle{plain}
 	\bibliography{referencias}
+	
+	\appendix
+	\input{apendice}
 	
 \end{document}
