resolvi o problema com as imagens da area de estudo

--- a/main.tex
+++ b/main.tex
@@ -82,7 +82,7 @@
 	\newpage
 	\begin{center}
 		\vspace*{\fill}
-		"O tempo que você gosta de perder não é tempo perdido" \\ 
+		"O tempo que você gosta de perder, não é tempo perdido" \\ 
 		% $ P \neq NP $ \\ 
 		[12cm]
 	\end{center}
