bugfix in chap.2

--- a/area_estudo.tex
+++ b/area_estudo.tex
@@ -13,7 +13,7 @@ A partir das obras do DNOS com a retilinização dos canais, problemas sedimento
 
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.9\linewidth]{../Projetos/TeX/mestrado/data/BHRSJ_2}
+		\includegraphics[width=0.9\linewidth]{data/BHRSJ_2}
 		\caption{Municípios inseridos na Bacia do rio São João.}
 		\label{fig:bhrsj2}
 	\end{figure}
