adicionei o local para as assinaturas

--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,34 @@
 	
 	\newpage
 	\begin{center}
+		\textsc{\large Eduardo Ribeiro Lacerda} \\
+		[1cm]
+	\end{center}
+	\begin{center}
+		\textsc{\large A Utilização de Banco de Dados Geográficos pela Geografia Brasileira. Um Estudo sobre o Estado da Arte e a Aplicação de Tecnologias Integradas à um Estudo de Caso na Bacia Hidrográfica do Rio São João - RJ} \\
+			[3cm]
+	\end{center} 
+		\setlength{\leftskip}{6cm}
+			Dissertação de Mestrado apresentada ao Programa de Pós-Graduação em Geografia, Universidade Federal do Rio de Janeiro, como requisito parcial à obtenção do título de Mestre em Geografia. \\ [3cm]
+	\begin{center}
+		\line(1,0){350} \\
+		{\normalsize Orientador, Rafael Silva de Barros, Dr., UFRJ} \\
+		[0.7cm] 
+		\line(1,0){350} \\
+		{\normalsize Coorientadora, Carla Bernadete Madureira Cruz, Dra., UFRJ} \\
+		[0.7cm] 
+		\line(1,0){350} \\
+		{\normalsize Vinicius da Silva Seabra, Dr., UERJ/FFP} \\
+		[0.7cm] 
+		\line(1,0){350} \\
+		{\normalsize Paula Maria Moura de Almeida, Dra., UCB/UFRJ} \\
+		[2cm] 
+		Rio de Janeiro \\
+		Janeiro de 2017
+	\end{center}
+	
+	\newpage
+	\begin{center}
 		\vspace*{\fill}
 		"O tempo que você gosta de perder não é tempo perdido" \\ 
 		% $ P \neq NP $ \\ 
