--- a/area_estudo.tex
+++ b/area_estudo.tex
@@ -3,7 +3,7 @@ A área de estudo está localizada na bacia hidrográfica do rio São João (BHR
 
 	\begin{figure}
 		\centering
-		\includegraphics[width=0.9\linewidth]{C:/Users/eduardo/Documents/Projetos/TeX/mestrado/data/BHRSJ.jpg}
+		\includegraphics[width=0.9\linewidth]{data/BHRSJ.jpg}
 		\caption{Localização da área de estudo.}
 		\label{fig:locareaestudo}
 	\end{figure}
