--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 %
 
 % Info
-\title{A Utilização de Banco de Dados Geográficos pela Geografia Brasileira. Um Estudo sobre o Estado da Arte e a Aplicação de Tecnologias Integradas à um Estudo de Caso na Bacia Hidrográfica do Rio São João - RJ}
+\title{A Utilização de Banco de Dados Geográficos pela Geografia Brasileira. Um Estudo sobre o Estado da Arte e a Aplicação de Tecnologias Integradas a um Estudo de Caso na Bacia Hidrográfica do Rio São João - RJ}
 \author{Eduardo Ribeiro Lacerda}
 \date{2016}
 
@@ -67,7 +67,7 @@
 			% \line(1,0){400} \\
 			[7.2cm]
 		\end{center}
-		\Large{A Utilização de Banco de Dados Geográficos pela Geografia Brasileira. Um Estudo sobre o Estado da Arte e a Aplicação de Tecnologias Integradas à um Estudo de Caso na Bacia Hidrográfica do Rio São João - RJ} \\
+		\Large{A Utilização de Banco de Dados Geográficos pela Geografia Brasileira. Um Estudo sobre o Estado da Arte e a Aplicação de Tecnologias Integradas a um Estudo de Caso na Bacia Hidrográfica do Rio São João - RJ} \\
 		[6cm] \\
 		% \line(1,0){400} \\
 		\begin{flushright}
